@@ -4,6 +4,7 @@ please update the categories "new features" and "bugfixes" before a pull request
 
 version 2.2.0-dev
 new features:
+- expand values stored in SimplePhasedTrigger 
 - added getting to query ARZ charge-excess profiles
 - upgrade to proposal v 7.5.0 with new NuRadioProposal interface and improved LPM treatment
 - add script to generate / download pre-calculated proposal tables for known detector configurations
